# PointGlyph

./: .gitignore  LICENSE  MEMORY.md  README.md  SESSION.md  pyproject.toml
docs/superpowers/plans/: 2026-05-27-pointglyph-mvp.md
docs/superpowers/specs/: 2026-05-27-pointglyph-mvp-design.md  2026-05-28-bold-font-file-design.md  particle-to-solid-wordmark-approach.md
exports/converg3d-bold/: manifest.json  particles.json
src/pointglyph/: __init__.py  cli.py  exporters.py  geometry.py  preview.py  sampling.py  text_mask.py
src/pointglyph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_exporters.py  test_geometry.py  test_sampling.py
